test/parse/bad-toplevel.txt
;;; ERROR: 1
(foo bar)
(;; STDERR ;;;
parse/bad-toplevel.txt:2:2: unexpected token "foo"
parse/bad-toplevel.txt:2:6: unexpected token "bar"
parse/bad-toplevel.txt:2:9: syntax error, unexpected )
;;; STDERR ;;)
